test loinc mapping with meta codes